# h2hc-linker

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  SESSION.md  WIP_no_peer_is_error.md  flake.nix
.github/workflows/: ci.yml  release.yml
STEPS/: GATEWAY_ARCHITECTURE_ANALYSIS.md  M2a_COMPLETION.md  M2a_PLAN.md  M2b_COMPLETION.md  M2c_COMPLETION.md  M2d_COMPLETION.md  M2e_COMPLETION.md  M4_STATUS.md  M5_PLAN.md  index.md
scripts/: e2e-test-membrane.sh  test-dht-roundtrip.sh  test-ws-client.mjs
src/: agent_proxy.rs  config.rs  dht_query.rs  error.rs  gateway_kitsune.rs  identity.rs  kitsune.rs  lib.rs  linker_report.rs  proxy_agent.rs  registration.rs  router.rs  service.rs  temp_op_store.rs  wire_preflight.rs
src/auth/: admin.rs  memory_store.rs  middleware.rs  mod.rs  session_store.rs  session_store_tests.rs  sqlite_store.rs  store.rs  types.rs
src/conductor/: admin_conn.rs  app_conn.rs  mod.rs
src/routes/: dht.rs  health.rs  kitsune.rs  mod.rs  publish.rs  test_signal.rs  websocket.rs  zome_call.rs
tests/: validation_op_fixtures.rs
