[package]
name = "hc-membrane"
version = "0.1.0"
description = "Holochain Membrane - Network edge gateway providing DHT access for lightweight clients"
authors = ["Holochain Community"]
license = "CAL-1.0"
edition = "2021"

[[bin]]
name = "hc-membrane"
path = "./src/bin/hc-membrane.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = "2"
futures = "0.3"
hex = "0.4"
holo_hash = { version = "0.6.0", features = ["hashing", "encoding"] }
holochain_client = "0.8.0"
holochain_conductor_api = "0.6.0"
holochain_serialized_bytes = "0.0"
holochain_types = "0.6.0"
holochain_websocket = "0.6.0"
holochain_p2p = "0.6.0"
kitsune2 = { version = "0.3.0", default-features = false, features = ["datachannel-vendored"] }
kitsune2_api = "0.3.0"
kitsune2_core = "0.3.0"
kitsune2_gossip = "0.3.0"
kitsune2_transport_tx5 = "0.3.0"
bytes = "1"
rmp-serde = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { package = "hc_serde_json", version = "1" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[dev-dependencies]
assert2 = "0.3"
http-body-util = "0.1"
mockall = "0.13"
reqwest = { version = "0.12", default-features = false }
tower = "0.5"

[features]
default = []
test-utils = []
# Use conductor for DHT queries (M2 fallback mode).
# When disabled (default), DHT queries go directly via kitsune2 wire protocol.
conductor-dht = []
